--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,79 +1,76 @@
 @tailwind base;
 @tailwind components;
-.active{
-  @apply border-b-2 text-primary
-}
 @tailwind utilities;
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 47.4% 11.2%;
+    --background: 0 0% 99%;
+    --foreground: 0 0% 11%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 0 0% 78%;
+    --muted-foreground: 0 0% 18%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
+    --popover: 0 0% 90%;
+    --popover-foreground: 0 0% 10%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
+    --card: 0 0% 95%;
+    --card-foreground: 0 0% 11%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
+    --border: 0 0% 15%;
+    --input: 0 0% 100%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 8 100% 71%;
+    --primary-foreground: 8 100% 30%;
+    --primary-hover: 8 100% 75%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 251 21% 71%;
+    --secondary-foreground: 251 21% 40%;
+    --secondary-hover: 251 21% 75%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 255 24% 80%;
+    --accent-foreground: 255 24% 30%;
+    --accent-hover: 255 24% 85%;
 
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
 
-    --ring: 215 20.2% 65.1%;
+    --ring: 0 0% 63.9%;
 
     --radius: 0.5rem;
-
-    --font-sans: 'Arial';
   }
 
   .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
+    --background: 0 0% 11%;
+    --foreground: 0 0% 99%;
 
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
+    --muted: 0 0% 18%;
+    --muted-foreground: 0 0% 78%;
 
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
+    --popover: 0 0% 10%;
+    --popover-foreground: 0 0% 90%;
 
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
+    --card: 0 0% 11%;
+    --card-foreground: 0 0% 95%;
 
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
+    --border: 0 0% 15%;
+    --input: 0 0% 100%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
+    --primary: 8 100% 30%;
+    --primary-foreground: 8 100% 71%;
+    --primary-hover: 8 100% 35%;
 
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
+    --secondary: 251 21% 40%;
+    --secondary-foreground: 251 21% 71%;
+    --secondary-hover: 251 21% 35%;
 
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 255 24% 30%;
+    --accent-foreground: 255 24% 80%;
+    --accent-hover: 255 24% 25%;
 
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: 0 0% 98%;
+    --destructive-foreground: 0 84.2% 60.2%;
 
-    --ring: 216 34% 17%;
-
-    --radius: 0.5rem;
-
-    --font-sans: "Arial";
+    --ring: 0 0% 14.9%;
   }
 }
 
@@ -83,15 +80,9 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* font-family: 'Times New Roman', Times, serif; */
+.active .link{
+  background-color: hsl(var(--accent));
 }
